syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message SumRequest {
  int32 first_num = 1;
  int32 second_num = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeNumberRequest {
  int32 number = 1;
}

message PrimeNumberResponse {
  int32 result = 1;
}

message AverageRequest {
  int32 number = 1;
}

message AverageResponse {
  float result = 1;
}

message MaxRequest {
  int32 number = 1;
}

message MaxResponse{
  int32 result = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};

  rpc Average(stream AverageRequest) returns (AverageResponse) {};

  rpc Max(stream MaxRequest) returns (stream MaxResponse) {};
}